--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "boundless",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.17.1",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "morgan": "~1.8.1"
-  }
+	"name": "boundless",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"eslint": "./node_modules/.bin/eslint ./routes/*.js",
+		"start": "node ./bin/www"
+	},
+	"dependencies": {
+		"body-parser": "~1.17.1",
+		"debug": "~2.6.3",
+		"express": "~4.15.2",
+		"morgan": "~1.8.1"
+	},
+	"devDependencies": {
+		"eslint": "^4.3.0"
+	}
 }
