--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
 		"body-parser": "~1.17.1",
 		"debug": "~2.6.3",
 		"express": "~4.15.2",
-		"morgan": "~1.8.1"
+		"express-validator": "^3.2.1",
+		"mongodb": "^2.2.30",
+		"morgan": "~1.8.1",
+		"uuid": "^3.1.0"
 	},
 	"devDependencies": {
 		"eslint": "^4.3.0",
